--- a/src/vstdll/vstdll.rc
+++ b/src/vstdll/vstdll.rc
@@ -20,7 +20,7 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "CompanyName", "CtrlBrk"
-            VALUE "LegalCopyright", "Copyright (c) 2010 Raphaël François"
+            VALUE "LegalCopyright", "Copyright (c) 2010-2011 Raphaël François"
             VALUE "FileDescription", APP_NAME
             VALUE "FileVersion", APP_VERSION
             VALUE "InternalName", APP_NAME
