--- a/src/vstboard/vstboard.rc
+++ b/src/vstboard/vstboard.rc
@@ -2,6 +2,7 @@
 #include <verrsrc.h>
 #include "_version.h"
 
+ICON_1 ICON DISCARDABLE "../../vstboard.ico"
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION APP_VERSION_MAJOR,APP_VERSION_MINOR,APP_VERSION_BUILD //,APP_VERSION_PATCH
 PRODUCTVERSION APP_VERSION_MAJOR,APP_VERSION_MINOR,APP_VERSION_BUILD //,APP_VERSION_PATCH
