Signed-off-by: CtrlBrk <ctrlbrk76@gmail.com>

--- a/src/dllLoader/dllLoader.rc
+++ b/src/dllLoader/dllLoader.rc
@@ -1,6 +1,6 @@
 #include <winver.h>
 #include <verrsrc.h>
-#include "../vstboard/_version.h"
+#include "../common/_version.h"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION APP_VERSION_MAJOR,APP_VERSION_MINOR,APP_VERSION_BUILD //,APP_VERSION_PATCH
