--- a/src/vstboard/vstboard.rc
+++ b/src/vstboard/vstboard.rc
@@ -1,6 +1,6 @@
 #include <winver.h>
 #include <verrsrc.h>
-#include "_version.h"
+#include "../common/_version.h"
 
 ICON_1 ICON DISCARDABLE "../../vstboard.ico"
 VS_VERSION_INFO VERSIONINFO
