- Finally compiles in Windows with QT5.4 and MingW (not stable, lots of bugs)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,24 @@
 Thumbs.db
 .DS_Store
 src/common/_version.h
+*.o
+*.tgz
+*.tar.gz
+*.zip
+Makefile*
+*.Debug
+*.Release
+src/common/debug/*
+src/common/release/*
+src/dllLoader/debug/*
+src/dllLoader/release/*
+src/dllLoaderInst/debug/*
+src/dllLoaderInst/release/*
+src/portaudio/debug/*
+src/portaudio/release/*
+src/portmidi/debug/*
+src/portmidi/release/*
+src/vstboard/debug/*
+src/vstboard/release/*
+src/vstdll/debug/*
+src/vstdll/release/*
