- Add RtMidi submodule, add RtAudio to vstboard.pro compile (code change not done yet) fixed several compile errors

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/rtaudio"]
 	path = libs/rtaudio
 	url = https://github.com/thestk/rtaudio.git
+[submodule "libs/rtmidi"]
+	path = libs/rtmidi
+	url = https://github.com/thestk/rtmidi.git
